--- a/src/Landing/Landing.css
+++ b/src/Landing/Landing.css
@@ -1,73 +1,49 @@
-/* MOBILE STYLING */
-
-/* background image */
-.landing-overlay {
-  /* background-image: url(''); */
-  background-size: cover;
-  border-radius: 1em;
-  display:flex; 
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0em 1em 1em 1em;
-  padding:8em;
+* {
+  box-sizing: border-box;
 }
 
-.landing-page-header {
-  color:white;
-  font-size: 1.5em;
+body {
+  font-family: "Open Sans",
+  sans-serif;
+  font-size: 20px;
+  color: #444;
+  text-align: center;
+  line-height: 1.5;
 }
 
-.landing-content-div {
-  display: flex; 
-  flex-direction: column;
-  width: 15em;
+nav,
+footer {
+  padding: 1% 0;
+  background-color: #aaa;
 }
 
-.landing-page-content {
-  color:white;
-  font-weight: bold;
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
 }
 
-.landing-btn {
-  background:orangered;
-  padding: .3em .6em;
-  color: white;
-  border: none;
-  border-radius: .3em;
-  font-size: 1.2em;
-  font-family: sans-serif;
-  font-weight:bold;
-  margin: .3em;
+header {
+  padding: 45px 15px;
 }
 
+section {
+  min-height: 200px;
+  padding: 30px 15px;
+  background-color: #bbb;
+}
 
+section:nth-child(even) {
+  background-color: #ddd;
+}
 
+p {
+  margin: 0 auto;
+  max-width: 650px;
+}
 
-/* FULL SCREEN */
-@media screen and (min-width:600px){
-  /* background image */
-  .landing-overlay {
-    background-size: cover;
-    padding:15em;
-  }
-  
-  .landing-page-header {
-    font-size: 2em;
-  }
-  
-  .landing-page-content {
-    margin: 1em;
-    padding: 2em;
-    width: 100%;
-  }
-    
-  a:link {
-    text-decoration:none;
-  }
-  
-  .landing-content-div {
-    width: 100%;
-  }
-  
-  }
+p + p {
+  margin-top: 15px;
+}
