--- a/src/SignUp/SignUp.css
+++ b/src/SignUp/SignUp.css
@@ -1,22 +1,83 @@
-* {
-  box-sizing: border-box;
+/*  MOBILE STYLING */
+.sign-up-overlay {
+  background-image: url('/src/images/sandiegocoast.jpeg');
+  background-size: cover;
+  border-radius: 1em;
+  display:flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1em;
+  padding:10em;
 }
 
-body {
-  font-family: "Open Sans",
-  sans-serif; 
-  font-size: 15px;
+.sign-up-page {
+  color:white;
+}
 
-  text-align: center;
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  color:white;
+  margin-bottom: 1em;
+  font-weight: bold;
+}
+
+.sign-up-input {
+  margin-bottom: 1em;
+  border-radius: .3em;
+  border: none;
+  padding-left: .5em;
+}
+
+.sign-up-button {
+  background:orangered;
+  padding: .3em .6em;
+  color: white;
+  border: none;
+  border-radius: .3em;
+  font-size: 1.2em;
+  font-weight: bold;
+  font-family: sans-serif;
+  margin: .3em;
+  display: flex;
+  justify-content: center;
+  }
+
+  .link-register-div {
+    color: white;
+    font-weight: bolder;
+  }
   
-}
-header {
-  padding: 5% 0;
- background-color: #bbb;
-}
-
-section {
-  min-height: 50px;
-  padding: 2% 0;
+  .login-link:hover {
+    color: orange;
+  }
   
-}
+  .login-link {
+    color:yellow;
+  }
+
+  .sign-up-title {
+    font-size: 1.5em;
+  }
+
+  @media screen and (min-width:600px){
+
+    .sign-up-overlay {
+      background-size: cover;
+      padding:15em;
+    }
+  
+    /* header text */
+    .sign-up-page {
+      margin: 1em;
+      padding: 2em;
+    }
+
+    .sign-up-title {
+      font-size: 2em;
+    }
+
+  }
+  
