--- a/src/SiteList/SiteList.css
+++ b/src/SiteList/SiteList.css
@@ -1,7 +1,7 @@
 /*////////////////////////////////// MOBILE STYLING /////////////////*/
  /* entire page + background */
  .list-page {
-  background-image: url('');
+  background-image: url('/src/images/wavez-search-4.jpeg');
   /* background-size: cover; */
   /* background-repeat: no-repeat; */
   border-radius: 1em;
@@ -123,3 +123,8 @@
   }
 
 }
+
+ 
+
+
+  
