--- a/src/Account/Account.css
+++ b/src/Account/Account.css
@@ -2,10 +2,11 @@
 
  /* entire page and background */
  .accounts-page {
-  /* background-image: url('/src/images/wavez-search-5.jpg'); */
+  background-image: url('/src/images/wavez-search-5.jpeg');
+
   background-size: cover;
   background-repeat: no-repeat;
-  border-radius: 1em;
+  /* border-radius: 1em; */
   }
   
   /* header text */
@@ -33,6 +34,7 @@
     border-radius: .5em;
   }
   
+ 
 
 /* FULL SCREEN */
 @media screen and (min-width:600px){
@@ -43,7 +45,7 @@
     justify-content: center;
     align-items: center;
     margin: 1em;
-    padding: 2em;
+    padding: 30em;
   }
   
   .saved-locations {
