--- a/src/SignUp/SignUp.css
+++ b/src/SignUp/SignUp.css
@@ -1,8 +1,8 @@
 /*  MOBILE STYLING */
 .sign-up-overlay {
-  /* background-image: url('/src/images/sandiegocoast.jpeg'); */
+  background-image: url('/src/images/wavez-search-3.jpeg');
   background-size: cover;
-  border-radius: 1em;
+  /* border-radius: 1em; */
   display:flex; 
   flex-direction: column;
   justify-content: center;
@@ -66,7 +66,7 @@
 
     .sign-up-overlay {
       background-size: cover;
-      padding:15em;
+      padding:20em;
     }
   
     /* header text */
